human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_17.wast
(assert_invalid
  (module (func $type-value-num-vs-void
    (loop (i32.const 1))
  ))
  "type mismatch"
)